# video-to-gif-converter

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  INSTRUCTIONS.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
